# scstuff

./: INSTALL  README.md  setup.cfg  setup.py
apps/check-config-inventory-consistency/: README.md  check-config-inventory-consistency.py  check-config-inventory-consistency.sh
apps/dump-active-streams/: dump-active-streams.py  dump-active-streams.sh
apps/dump-channel-gains/: dump-channel-gains.py  dump-channel-gains.sh
apps/dump-station-coordinates/: dump-station-coordinates.py  dump-station-coordinates.sh
apps/inv-to-sacpz/: README.md  scstuff.inv-to-sacpz.py
apps/scbulletin2/: README.md  scbulletin2.py
apps/set-magnitude-type/: README.md  scstuff.set-magtype.py  test.sh
apps/station-coordinates-to-inventory/: scstuff.make-mini-inventory.py
apps/teleseismic-traveltimes/: scstuff.ttt.py
apps/xml/: README.md  scstuff.xml-anonymize.py  scstuff.xml-dump-with-mt.py  scstuff.xml-to-cube.py  scstuff.xml-to-mt-creation-info.py  scstuff.xml-to-mt-txt.py
messaging/event-client/: eventclient.py  run.sh
messaging/pick-client/: minimal.py  pick-client.py  run.sh
messaging/pick-sender/: dummypicker.sh  picksender.py  test.sh
playback/: README.md
playback/mseed/: make-mseed-playback.py  make-mseed-playback.sh
playback/notifier/: README.md  notifier-extract.py  notifier-logger.py  notifier-player.py  run-notifier-logger.sh
playback/xml/: README.md  make-xml-playback.sh  run-xml-playback-autoloc.sh  run-xml-playback-messaging.sh  (+3 more)
scstuff/: bulletin.py  dbutil.py  eventloader.py  inventory.py  mtutil.py  util.py
test/: mt-to-txt.py  test.sh
(+18 files in other folders)
