[metadata]
name = scstuff

[options]
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scstuff-bulletin = scstuff.apps.bulletin:main
    scstuff-dump-channel-gains = scstuff.apps.dumpchannelgains:main
    scstuff-dump-station-coordinates = scstuff.apps.dumpstationcoordinates:main
    scstuff-dump-event-comments = scstuff.apps.dumpeventcomments:main
    scstuff-set-magnitude-type = scstuff.apps.setmagtype:main
    scstuff-xml-anonymize = scstuff.apps.xml.anonymize:main
    scstuff-xml-dump-with-mt = scstuff.apps.xml.dump:main
    scstuff-xml-to-mt-txt = scstuff.apps.xml.mttotxt:main
